added coreType field in meeting model
